Fixed Parallax Scrolling images not fitting the header section

--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ header:after {
 
 .mountain1 {
   position: absolute;
-  bottom: -250px;
+  bottom: -200px;
   width: 1500px;
   right: 0;
   z-index: 19;
@@ -46,7 +46,7 @@ header:after {
 .person {
   position: absolute;
   width: 650px;
-  bottom: -250px;
+  bottom: -240px;
   left: -70px;
   z-index: 20;
 }
@@ -54,15 +54,15 @@ header:after {
 .mountain2 {
   position: absolute;
   width: 1500px;
-  bottom: -100px;
+  bottom: -300px;
   left: 0;
   z-index: 18;
 }
 
 .mountain3 {
   position: absolute;
-  width: 900px;
-  bottom: 150px;
+  width: 1100px;
+  bottom: 50px;
   right: 0;
   z-index: 17;
 }
@@ -70,7 +70,8 @@ header:after {
 .sky {
   position: absolute;
   width: 2100px;
-  bottom: 250px;
+  height: 100vh;
+  bottom: 0px;
   right: 0;
 }
 
